--- a/index.html
+++ b/index.html
@@ -5,30 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/46806d9191.js" crossorigin="anonymous"></script>
   <title>Xavier Hernandez - Web Developer</title>
 </head>
 <body>
 
-  <div class="container">
-    <section class="header">
-      <h1>First Page</h1>
-    </section>
-    <section class="presentation">
-      <h1>Second Page</h1>
-    </section>
-    <section class="skills">
-      <h1>Third Page</h1>
-    </section>
-    <section class="projects">
-      <h1>Fourth Page</h1>
-    </section>
-    <section class="experience">
-      <h1>Fifth Page</h1>
-    </section>
-    <section class="contact">
-      <h1>Sixth Page</h1>
-    </section>
-  </div>
   
 </body>
 </html>
