landing and skills basic layout and styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,50 @@
   <title>Xavier Hernandez - Web Developer</title>
 </head>
 <body>
+  <section id="landing">
+    <div class="landing container">
+      <div>
+        <h1>Hello, <span></span></h1>
+        <h1>My name is Xavier<span></span></h1>
+        <a href="#" type="button" class="cta">Portfolio</a>
+      </div>
+    </div>
+  </section>
 
-  
+  <section id="skills">
+    <div class="skills container">
+      <div class="skills-top">
+        <h1 class="section-title">Presentation</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+          Magnam nam quidem vitae alias vel doloremque porro, officia dolores asperiores esse hic animi maxime deserunt adipisci corporis corrupti repellat quod vero.</p>
+      </div>
+      <div class="skills-cards"></div>
+        <div class="skills-card">
+          <div class="icon"><i class="fab fa-html5"></i>|<i class="fab fa-css3-alt"></i></div>
+          <h2>HTML5 | CSS3</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Iure optio, quis est facilis magnam pariatur natus at quisquam illum deleniti, veritatis eligendi tenetur rem eveniet mollitia qui molestiae commodi. Cum?</p>
+        </div>
+        <div class="skills-card">
+          <div class="icon"><i class="far fa-gem"></i></div>
+          <h2>Ruby | Ruby on Rails</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Iure optio, quis est facilis magnam pariatur natus at quisquam illum deleniti, veritatis eligendi tenetur rem eveniet mollitia qui molestiae commodi. Cum?</p>
+        </div>
+        <div class="skills-card">
+          <div class="icon"><i class="fab fa-js"></i></div>
+          <h2>Javascript ES6</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Iure optio, quis est facilis magnam pariatur natus at quisquam illum deleniti, veritatis eligendi tenetur rem eveniet mollitia qui molestiae commodi. Cum?</p>
+        </div>
+        <div class="skills-card">
+          <div class="icon"><i class="fas fa-database"></i></div>
+          <h2>SQLite | PostgreSQL</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Iure optio, quis est facilis magnam pariatur natus at quisquam illum deleniti, veritatis eligendi tenetur rem eveniet mollitia qui molestiae commodi. Cum?</p>
+        </div>
+    </div>
+  </section>
+
 </body>
 </html>
