--- a/index.html
+++ b/index.html
@@ -53,6 +53,52 @@
         </div>
     </div>
   </section>
+  <section id="projects">
+    <div class="projects container">
+      <div class="projects-header">
+        <h1 class="section-title">Projets Récents</h1>
+      </div>
+      <div class="all-projects">
+        <div class="project-item">
+          <div class="project-info">
+            <h1>Projet 1</h1>
+            <h2>Coding is Love</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+              Atque consequatur labore reprehenderit? At nesciunt aliquam quos laboriosam perspiciatis? Dolore assumenda commodi velit laborum, voluptate blanditiis autem asperiores natus nostrum repellendus?</p>
+          </div>
+          <div class="project-image">
+            <img src="./images/MCW1.jpg" alt="Cryptowallet Screenshot 1">
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="project-info">
+            <h1>Projet 2</h1>
+            <h2>Coding is Love</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+              Atque consequatur labore reprehenderit? At nesciunt aliquam quos laboriosam perspiciatis? Dolore assumenda commodi velit laborum, voluptate blanditiis autem asperiores natus nostrum repellendus?</p>
+          </div>
+          <div class="project-image">
+            <img src="./images/Watch1.jpg" alt="ohMyWatch Screenshot 1">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <section id="about">
+    <div class="about container">
+      <div class="col-left">
+        <div class="about-img">
+          <img src="#" alt="Profile picture">
+        </div>
+      </div>
+      <div class="col-right">
+        <h1 class="section-title">A propos de moi:</h1>
+        <h2>Web Developer</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Dolor commodi voluptatem expedita esse quaerat officia labore repudiandae ad! Distinctio officiis doloremque rem, non hic quasi sunt dolor. Esse, molestias expedita!</p>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
