final design and sections

--- a/index.html
+++ b/index.html
@@ -9,96 +9,240 @@
   <title>Xavier Hernandez - Web Developer</title>
 </head>
 <body>
-  <section id="landing">
-    <div class="landing container">
-      <div>
-        <h1>Hello, <span></span></h1>
-        <h1>My name is Xavier<span></span></h1>
-        <a href="#" type="button" class="cta">Portfolio</a>
+ 
+  <!-- Header -->
+  <section id="header">
+    <div class="header container">
+      <div class="nav-bar">
+        <div class="brand">
+          <a href="#hero">
+            <h1><span>XH</span></h1>
+          </a>
+        </div>
+        <div class="nav-list">
+          <div class="hamburger">
+            <div class="bar"></div>
+          </div>
+          <ul>
+            <li><a href="#hero" data-after="Home">Home</a></li>
+            <li><a href="#skills" data-after="Skills">Skills</a></li>
+            <li><a href="#projects" data-after="Projects">Projects</a></li>
+            <li><a href="#about" data-after="About">About</a></li>
+            <li><a href="#contact" data-after="Contact">Contact</a></li>
+          </ul>
+        </div>
       </div>
     </div>
   </section>
+  <!-- End Header -->
 
+
+  <!-- Hero Section  -->
+  <section id="hero">
+    <div class="hero container">
+      <div>
+        <div class="profile-pic"></div>
+        <h1>Hello, <span></span></h1>
+        <h1>My name is <span></span></h1>
+        <h1>Xavier <span></span></h1>
+        <a href="#about" type="button" class="cta">HIRE ME</a>
+      </div>
+    </div>
+  </section>
+  <!-- End Hero Section  -->
+
+  <!-- Skills Section -->
   <section id="skills">
     <div class="skills container">
-      <div class="skills-top">
-        <h1 class="section-title">Presentation</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
-          Magnam nam quidem vitae alias vel doloremque porro, officia dolores asperiores esse hic animi maxime deserunt adipisci corporis corrupti repellat quod vero.</p>
+      <div class="skill-top">
+        <h1 class="section-title">Sk<span>i</span>lls</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas
+          magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias
+          voluptatum explicabo!</p>
       </div>
-      <div class="skills-cards"></div>
-        <div class="skills-card">
-          <div class="icon"><i class="fab fa-html5"></i>|<i class="fab fa-css3-alt"></i></div>
-          <h2>HTML5 | CSS3</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Iure optio, quis est facilis magnam pariatur natus at quisquam illum deleniti, veritatis eligendi tenetur rem eveniet mollitia qui molestiae commodi. Cum?</p>
+      <div class="skill-bottom">
+        <div class="skill-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+          <h2>Web Design</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
+            architecto placeat beatae tenetur officia quod</p>
         </div>
-        <div class="skills-card">
-          <div class="icon"><i class="far fa-gem"></i></div>
-          <h2>Ruby | Ruby on Rails</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Iure optio, quis est facilis magnam pariatur natus at quisquam illum deleniti, veritatis eligendi tenetur rem eveniet mollitia qui molestiae commodi. Cum?</p>
+        <div class="skill-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+          <h2>Web Design</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
+            architecto placeat beatae tenetur officia quod</p>
         </div>
-        <div class="skills-card">
-          <div class="icon"><i class="fab fa-js"></i></div>
-          <h2>Javascript ES6</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Iure optio, quis est facilis magnam pariatur natus at quisquam illum deleniti, veritatis eligendi tenetur rem eveniet mollitia qui molestiae commodi. Cum?</p>
+        <div class="skill-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+          <h2>Web Design</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
+            architecto placeat beatae tenetur officia quod</p>
         </div>
-        <div class="skills-card">
-          <div class="icon"><i class="fas fa-database"></i></div>
-          <h2>SQLite | PostgreSQL</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Iure optio, quis est facilis magnam pariatur natus at quisquam illum deleniti, veritatis eligendi tenetur rem eveniet mollitia qui molestiae commodi. Cum?</p>
+        <div class="skill-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
+          <h2>Web Design</h2>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
+            architecto placeat beatae tenetur officia quod</p>
         </div>
+      </div>
     </div>
   </section>
+  <!-- End Skills Section -->
+
+  <!-- Projects Section -->
   <section id="projects">
     <div class="projects container">
       <div class="projects-header">
-        <h1 class="section-title">Projets Récents</h1>
+        <h1 class="section-title">Recent <span>Projects</span></h1>
       </div>
       <div class="all-projects">
         <div class="project-item">
           <div class="project-info">
-            <h1>Projet 1</h1>
+            <h1>Project 1</h1>
             <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-              Atque consequatur labore reprehenderit? At nesciunt aliquam quos laboriosam perspiciatis? Dolore assumenda commodi velit laborum, voluptate blanditiis autem asperiores natus nostrum repellendus?</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
+              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
+              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
-          <div class="project-image">
-            <img src="./images/MCW1.jpg" alt="Cryptowallet Screenshot 1">
+          <div class="project-img">
+            <img src="./img/img-1.png" alt="img">
           </div>
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1>Projet 2</h1>
+            <h1>Project 2</h1>
             <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-              Atque consequatur labore reprehenderit? At nesciunt aliquam quos laboriosam perspiciatis? Dolore assumenda commodi velit laborum, voluptate blanditiis autem asperiores natus nostrum repellendus?</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
+              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
+              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
           </div>
-          <div class="project-image">
-            <img src="./images/Watch1.jpg" alt="ohMyWatch Screenshot 1">
+          <div class="project-img">
+            <img src="./img/img-1.png" alt="img">
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="project-info">
+            <h1>Project 3</h1>
+            <h2>Coding is Love</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
+              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
+              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+          </div>
+          <div class="project-img">
+            <img src="./img/img-1.png" alt="img">
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="project-info">
+            <h1>Project 4</h1>
+            <h2>Coding is Love</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
+              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
+              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+          </div>
+          <div class="project-img">
+            <img src="./img/img-1.png" alt="img">
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="project-info">
+            <h1>Project 5</h1>
+            <h2>Coding is Love</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
+              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
+              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+          </div>
+          <div class="project-img">
+            <img src="./img/img-1.png" alt="img">
           </div>
         </div>
       </div>
     </div>
   </section>
+  <!-- End Projects Section -->
 
+  <!-- About Section -->
   <section id="about">
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="#" alt="Profile picture">
+          <img src="./images/profile_optimized-removebg-preview.png" alt="Profile picture">
         </div>
       </div>
       <div class="col-right">
-        <h1 class="section-title">A propos de moi:</h1>
-        <h2>Web Developer</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-          Dolor commodi voluptatem expedita esse quaerat officia labore repudiandae ad! Distinctio officiis doloremque rem, non hic quasi sunt dolor. Esse, molestias expedita!</p>
+        <h1 class="section-title">About <span>me</span></h1>
+        <h2>Full Stack Web Developer</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius non illum beatae atque
+          repellat ratione qui veritatis repudiandae adipisci maiores. At inventore necessitatibus deserunt
+          exercitationem cumque earum omnis ipsum rem accusantium quis, quas quia, accusamus provident suscipit magni!
+          Expedita sint ad dolore, commodi labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt
+          reprehenderit libero enim!</p>
+        <a href="#" class="cta">Download Resume</a>
       </div>
     </div>
   </section>
+  <!-- End About Section -->
+
+  <!-- Contact Section -->
+  <section id="contact">
+    <div class="contact container">
+      <div>
+        <h1 class="section-title">Contact <span>info</span></h1>
+      </div>
+      <div class="contact-items">
+        <div class="contact-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></div>
+          <div class="contact-info">
+            <h1>Phone</h1>
+            <h2>FR: 06 26 09 19 66</h2>
+            <h2>US-UK: +33 6 26 09 19 66</h2>
+          </div>
+        </div>
+        <div class="contact-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
+          <div class="contact-info">
+            <h1>Email</h1>
+            <h2>xhernan.martinez@gmail.com</h2>
+          </div>
+        </div>
+        <div class="contact-item">
+          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
+          <div class="contact-info">
+            <h1>Address</h1>
+            <h2>Currently in Bordeaux, France</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End Contact Section -->
+
+  <!-- Footer -->
+  <section id="footer">
+    <div class="footer container">
+      <div class="brand">
+        <h1><span>X</span>avier <span>H</span>ernandez</h1>
+      </div>
+      <h2>Your Web Developer</h2>
+      <div class="social-icon">
+        <div class="social-item">
+          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
+        </div>
+        <div class="social-item">
+          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
+        </div>
+        <div class="social-item">
+          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" /></a>
+        </div>
+        <div class="social-item">
+          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
+        </div>
+      </div>
+      <p>Copyright © 2021 XH. All rights reserved</p>
+    </div>
+  </section>
+  <!-- End Footer -->
+  <script src="./app.js"></script>
 </body>
 </html>
