completed sections design and links

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Personal portfolio of Xavier Hernandez. Web Developer Ruby on Rails | JavaScript."/>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/46806d9191.js" crossorigin="anonymous"></script>
   <title>Xavier Hernandez - Web Developer</title>
@@ -16,7 +17,7 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="#hero">
-            <h1><span>XH</span></h1>
+            <h1><span>X</span>avier<span>H</span></h1>
           </a>
         </div>
         <div class="nav-list">
@@ -45,7 +46,7 @@
         <h1>Hello, <span></span></h1>
         <h1>My name is <span></span></h1>
         <h1>Xavier <span></span></h1>
-        <a href="#about" type="button" class="cta">HIRE ME</a>
+        <a href="#skills" type="button" class="cta">SEE MORE</a>
       </div>
     </div>
   </section>
@@ -56,34 +57,27 @@
     <div class="skills container">
       <div class="skill-top">
         <h1 class="section-title">Sk<span>i</span>lls</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum deleniti maiores pariatur assumenda quas
-          magni et, doloribus quod voluptate quasi molestiae magnam officiis dolorum, dolor provident atque molestias
-          voluptatum explicabo!</p>
       </div>
       <div class="skill-bottom">
         <div class="skill-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Web Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
+          <div class="icon"><i class="fab fa-html5"></i><i class="fab fa-css3-alt"></i></div>
+          <h2>HTML5 | CSS3</h2>
+          <p>HTML Semantic, Organic SEO, CSS Flexbox and Grid, Bootstrap5 and TailwindCSS.</p>
         </div>
         <div class="skill-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Web Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
+          <div class="icon"><i class="far fa-gem"></i></div>
+          <h2>Ruby | Ruby on Rails</h2>
+          <p>Rails and its large collection of gems : Devise, Pundit, Sidekiq, as well as Redis and Heroku for deployment.</p>
         </div>
         <div class="skill-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Web Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
+          <div class="icon"><i class="fab fa-js"></i></div>
+          <h2>JavaScript ES6</h2>
+          <p>I use JavaScript Vanilla and popular JS libraries associated with Rails, like Stimulus and RequestJS.</p>
         </div>
         <div class="skill-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" /></div>
-          <h2>Web Design</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis debitis rerum, magni voluptatem sed
-            architecto placeat beatae tenetur officia quod</p>
+          <div class="icon"><i class="fas fa-database"></i></div>
+          <h2>Databases</h2>
+          <p>As a Rails developer, I mainly work with PostgreSQL and SQLite.</p>
         </div>
       </div>
     </div>
@@ -99,62 +93,28 @@
       <div class="all-projects">
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 1</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+            <h1>MyCryptoWallet</h1>
+            <h2>Bootcamp Project</h2>
+            <p>A 2-week project with the goal to allow investors to manage their portfolios from different market places like Binance or Kraken in one single app. Using APIs, TradingView and access to over 1800 coins.</p>
+            <p class="github-link"><a href="https://github.com/gwendal-dev/mycryptowallet-final" target="_blank" rel="noopener">Check code on Github | <i class="fab fa-github"></i></a></p>
+            <p class="live-link"><a href="https://www.mycryptowallet.fr" target="_blank" rel="noopener">See Live project on Heroku | <i class="fas fa-external-link-alt"></i></a></p>
+            <small>Loading may take up to 40s if no recent visit.</small>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./images/MCW1.jpg" alt="cryptocurrencies market">
           </div>
         </div>
         <div class="project-item">
           <div class="project-info">
-            <h1>Project 2</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
+            <h1>ohMyWatch</h1>
+            <h2>Bootcamp Project</h2>
+            <p>A 1-week project with the intent to offer a rental site for luxury watches. Standard Rails CRUD application with Geolocation.</p>
+            <p class="github-link"><a href="https://github.com/DamoVigo/ohmywatch" target="_blank" rel="noopener">Check code on Github | <i class="fab fa-github"></i></a></p>
+            <p class="live-link"><a href="https://mywatchesrent.herokuapp.com/" target="_blank" rel="noopener">See Live project on Heroku | <i class="fas fa-external-link-alt"></i></a></p>
+            <small>Loading may take up to 40s if no recent visit.</small>
           </div>
           <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Project 3</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
-          </div>
-          <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Project 4</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
-          </div>
-          <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
-          </div>
-        </div>
-        <div class="project-item">
-          <div class="project-info">
-            <h1>Project 5</h1>
-            <h2>Coding is Love</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad, iusto cupiditate voluptatum impedit unde
-              rem ipsa distinctio illum quae mollitia ut, accusantium eius odio ducimus illo neque atque libero non sunt
-              harum? Ipsum repellat animi, fugit architecto voluptatum odit et!</p>
-          </div>
-          <div class="project-img">
-            <img src="./img/img-1.png" alt="img">
+            <img src="./images/Watch2.jpg" alt="luxury watches rental site">
           </div>
         </div>
       </div>
@@ -173,12 +133,12 @@
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
         <h2>Full Stack Web Developer</h2>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Asperiores, velit alias eius non illum beatae atque
-          repellat ratione qui veritatis repudiandae adipisci maiores. At inventore necessitatibus deserunt
-          exercitationem cumque earum omnis ipsum rem accusantium quis, quas quia, accusamus provident suscipit magni!
-          Expedita sint ad dolore, commodi labore nihil velit earum ducimus nulla quae nostrum fugit aut, deserunt
-          reprehenderit libero enim!</p>
-        <a href="#" class="cta">Download Resume</a>
+        <p>Web Developer, recently retrained after 10 years of experience as LiveOps manager for the french iGaming market leader.
+          I'm product-oriented and eager to develop my skills with both Ruby on Rails and Javascript. I will bring value to your projects with both technical, and product management proficiency.  
+          Good soft skills, fluent English, open to relocation.</p>
+        <a href="#" class="cta">French Resume</a>
+        <br>
+        <a href="#" class="cta-secondary">English Resume</a>
       </div>
     </div>
   </section>
@@ -192,7 +152,7 @@
       </div>
       <div class="contact-items">
         <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/phone.png" /></div>
+          <div class="icon"><i class="fas fa-phone"></i></div>
           <div class="contact-info">
             <h1>Phone</h1>
             <h2>FR: 06 26 09 19 66</h2>
@@ -200,14 +160,14 @@
           </div>
         </div>
         <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/new-post.png" /></div>
+          <div class="icon"><i class="fas fa-envelope"></i></div>
           <div class="contact-info">
             <h1>Email</h1>
             <h2>xhernan.martinez@gmail.com</h2>
           </div>
         </div>
         <div class="contact-item">
-          <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/map-marker.png" /></div>
+          <div class="icon"><i class="fas fa-map-marker-alt"></i></div>
           <div class="contact-info">
             <h1>Address</h1>
             <h2>Currently in Bordeaux, France</h2>
@@ -224,22 +184,19 @@
       <div class="brand">
         <h1><span>X</span>avier <span>H</span>ernandez</h1>
       </div>
-      <h2>Your Web Developer</h2>
+      <h2>Web Developement</h2>
       <div class="social-icon">
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/facebook-new.png" /></a>
+          <a href="https://www.linkedin.com/in/xavihrez" target="_blank" rel="noopener"><i class="fab fa-linkedin"></i></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" /></a>
+          <a href="https://github.com/XavHernandez" target="_blank" rel="noopener"><i class="fab fa-github-square"></i></a>
         </div>
         <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/twitter.png" /></a>
-        </div>
-        <div class="social-item">
-          <a href="#"><img src="https://img.icons8.com/bubbles/100/000000/behance.png" /></a>
+          <a href="https://twitter.com/_xhernan" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a>
         </div>
       </div>
-      <p>Copyright © 2021 XH. All rights reserved</p>
+      <p>Copyright © 2021 XHM. All rights reserved</p>
     </div>
   </section>
   <!-- End Footer -->
