added personal project and hr separation

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="skill-item">
           <div class="icon"><i class="far fa-gem"></i></div>
           <h2>Ruby | Ruby on Rails</h2>
-          <p>Rails and its large collection of gems : Devise, Pundit, Sidekiq, as well as Redis and Heroku for deployment.</p>
+          <p>Rails and its large collection of gems : Devise, Pundit, Sidekiq, as well as Minitest, RSpec, Redis and Heroku for deployment.</p>
         </div>
         <div class="skill-item">
           <div class="icon"><i class="fab fa-js"></i></div>
@@ -93,15 +93,28 @@
       <div class="all-projects">
         <div class="project-item">
           <div class="project-info">
-            <h1>MyCryptoWallet</h1>
+            <h1>CryptoWallet</h1>
             <h2>Bootcamp Project</h2>
             <p>A 2-week project with the goal to allow investors to manage their portfolios from different market places like Binance or Kraken in one single app. Using APIs, TradingView and access to over 1800 coins.</p>
+            <hr>
             <p class="github-link"><a href="https://github.com/gwendal-dev/mycryptowallet-final" target="_blank" rel="noopener">Check code on Github | <i class="fab fa-github"></i></a></p>
             <p class="live-link"><a href="https://www.mycryptowallet.fr" target="_blank" rel="noopener">See Live project on Heroku | <i class="fas fa-external-link-alt"></i></a></p>
             <small>Loading may take up to 40s if no recent visit.</small>
           </div>
           <div class="project-img">
-            <img src="./images/MCW1.jpg" alt="cryptocurrencies market">
+            <img src="./images/MCW2.jpg" alt="cryptocurrencies market">
+          </div>
+        </div>
+        <div class="project-item">
+          <div class="project-info">
+            <h1>Online Portfolio</h1>
+            <h2>Personal Project</h2>
+            <p>Online personal presentation with HTML, CSS and Vanilla JavaScript. Optimization with Lighthouse.</p>
+            <hr>
+            <p class="github-link"><a href="https://github.com/XavHernandez/personal-pages" target="_blank" rel="noopener">Check code on Github | <i class="fab fa-github"></i></a></p>
+          </div>
+          <div class="project-img">
+            <img src="./images/Watch2.jpg" salt="luxury watches rental site">
           </div>
         </div>
         <div class="project-item">
@@ -109,12 +122,13 @@
             <h1>ohMyWatch</h1>
             <h2>Bootcamp Project</h2>
             <p>A 1-week project with the intent to offer a rental site for luxury watches. Standard Rails CRUD application with Geolocation.</p>
+            <hr>
             <p class="github-link"><a href="https://github.com/DamoVigo/ohmywatch" target="_blank" rel="noopener">Check code on Github | <i class="fab fa-github"></i></a></p>
             <p class="live-link"><a href="https://mywatchesrent.herokuapp.com/" target="_blank" rel="noopener">See Live project on Heroku | <i class="fas fa-external-link-alt"></i></a></p>
             <small>Loading may take up to 40s if no recent visit.</small>
           </div>
           <div class="project-img">
-            <img src="./images/Watch2.jpg" alt="luxury watches rental site">
+            <img src="./images/Watch2.jpg" salt="luxury watches rental site">
           </div>
         </div>
       </div>
