modified project pictures - favicon added

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Personal portfolio of Xavier Hernandez. Web Developer Ruby on Rails | JavaScript."/>
+  <link rel="shortcut icon" type="image/x-icon" href="./images/omnifocus_alt_macos_bigsur_icon_189883.ico">
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/46806d9191.js" crossorigin="anonymous"></script>
   <title>Xavier Hernandez - Web Developer</title>
@@ -102,19 +103,19 @@
             <small>Loading may take up to 40s if no recent visit.</small>
           </div>
           <div class="project-img">
-            <img src="./images/MCW2.jpg" alt="cryptocurrencies market">
+            <img src="./images/mcw-screen3.jpg" alt="Cryptocurrencies Market">
           </div>
         </div>
         <div class="project-item">
           <div class="project-info">
             <h1>Online Portfolio</h1>
             <h2>Personal Project</h2>
-            <p>Online personal presentation with HTML, CSS and Vanilla JavaScript. Optimization with Lighthouse.</p>
+            <p>Online personal presentation with HTML, CSS and Vanilla JavaScript. Optimisation with Lighthouse.</p>
             <hr>
             <p class="github-link"><a href="https://github.com/XavHernandez/personal-pages" target="_blank" rel="noopener">Check code on Github | <i class="fab fa-github"></i></a></p>
           </div>
           <div class="project-img">
-            <img src="./images/Watch2.jpg" salt="luxury watches rental site">
+            <img src="./images/lighthouse-benchmark.png" alt="Personal portfolio screenshot">
           </div>
         </div>
         <div class="project-item">
@@ -128,7 +129,7 @@
             <small>Loading may take up to 40s if no recent visit.</small>
           </div>
           <div class="project-img">
-            <img src="./images/Watch2.jpg" salt="luxury watches rental site">
+            <img src="./images/watches-screen3.jpg" alt="Luxury Watches rental site">
           </div>
         </div>
       </div>
