--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="skill-item">
           <div class="icon"><i class="far fa-gem"></i></div>
           <h2>Ruby | Ruby on Rails</h2>
-          <p>Rails and its large collection of gems : Devise, Pundit, Sidekiq, as well as Minitest, RSpec, Redis and Heroku for deployment.</p>
+          <p>Rails and its large collection of gems : Hotwire, Devise, Pundit, Sidekiq, as well as Minitest, RSpec, Redis and Heroku for deployment.</p>
         </div>
         <div class="skill-item">
           <div class="icon"><i class="fab fa-js"></i></div>
@@ -151,9 +151,9 @@
         <p>Web Developer, recently retrained after 10 years of experience as LiveOps manager for the french iGaming market leader.
           I'm product-oriented and eager to develop my skills with both Ruby on Rails and Javascript. I will bring value to your projects with both technical, and product management proficiency.  
           Good soft skills, fluent English, open to relocation.</p>
-        <a href="#" class="cta">French Resume</a>
+        <a href="./images/xhernandez-cv-FR.pdf" class="cta">French Resume</a>
         <br>
-        <a href="#" class="cta-secondary">English Resume</a>
+        <a href="./images/xhernandez-cv-EN.pdf" class="cta-secondary">English Resume</a>
       </div>
     </div>
   </section>
