--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1>Hello, <span></span></h1>
         <h1>My name is <span></span></h1>
         <h1>Xavier <span></span></h1>
-        <a href="#skills" type="button" class="cta">SEE MORE</a>
+        <a href="#projects" type="button" class="cta">PORTFOLIO</a>
       </div>
     </div>
   </section>
@@ -148,12 +148,12 @@
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
         <h2>Full Stack Web Developer</h2>
-        <p>Web Developer, recently retrained after 10 years of experience as LiveOps manager for the french iGaming market leader.
-          I'm product-oriented and eager to develop my skills with both Ruby on Rails and Javascript. I will bring value to your projects with both technical, and product management proficiency.  
-          Good soft skills, fluent English, open to relocation.</p>
-        <a href="./images/xhernandez-cv-FR.pdf" class="cta">French Resume</a>
+        <p>After a 10 years career as LiveOps manager for the french iGaming market leader, I decided to move to programming through web development. 
+          Following a Full-stack bootcamp at Le Wagon Bordeaux where I obtained my certification, I am now looking for a position as a junior full-stack or back-end developer. 
+          I'm product-oriented, customer centric, and eager to develop my skills with both Ruby on Rails and Javascript. I have good soft skills, and speak a fluent English. Open to relocation.</p>
+        <a href="./images/xhernandez-CV-FR.pdf" class="cta">French Resume</a>
         <br>
-        <a href="./images/xhernandez-cv-EN.pdf" class="cta-secondary">English Resume</a>
+        <a href="./images/xhernandez-CV-EN.pdf" class="cta-secondary">English Resume</a>
       </div>
     </div>
   </section>
