--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Personal portfolio of Xavier Hernandez. Web Developer Ruby on Rails | JavaScript."/>
+  <meta name="twitter:card" content="summary"/>
+  <meta name="twitter:site" content="@_xhernan"/>
+  <meta name="twitter:creator" content="@_xhernan"/>
+  <meta property="og:url" content="https://www.xhernandez.me/"/>
+  <meta property="og:title" content="Xavier Hernandez's Portfolio">
+  <meta property="og:description" content="Personal portfolio of Xavier Hernandez. Web Developer Ruby on Rails | JavaScript.">
+  <meta property="og:image" content="https://images.unsplash.com/photo-1484417894907-623942c8ee29?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2978&q=80"/>
   <link rel="shortcut icon" type="image/x-icon" href="./images/omnifocus_alt_macos_bigsur_icon_189883.ico">
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/46806d9191.js" crossorigin="anonymous"></script>
@@ -12,7 +19,7 @@
 </head>
 <body>
  
-  <!-- Header -->
+ 
   <section id="header">
     <div class="header container">
       <div class="nav-bar">
@@ -36,10 +43,7 @@
       </div>
     </div>
   </section>
-  <!-- End Header -->
-
-
-  <!-- Hero Section  -->
+  
   <section id="hero">
     <div class="hero container">
       <div>
@@ -51,9 +55,7 @@
       </div>
     </div>
   </section>
-  <!-- End Hero Section  -->
-
-  <!-- Skills Section -->
+ 
   <section id="skills">
     <div class="skills container">
       <div class="skill-top">
@@ -68,7 +70,7 @@
         <div class="skill-item">
           <div class="icon"><i class="far fa-gem"></i></div>
           <h2>Ruby | Ruby on Rails</h2>
-          <p>Rails and its large collection of gems : Hotwire, Devise, Pundit, Sidekiq, as well as Minitest, RSpec, Redis and Heroku for deployment.</p>
+          <p>Rails and its large collection of gems : Hotwire, Devise, Pundit, Sidekiq, as well as Minitest, RSpec and Heroku for deployment.</p>
         </div>
         <div class="skill-item">
           <div class="icon"><i class="fab fa-js"></i></div>
@@ -78,14 +80,12 @@
         <div class="skill-item">
           <div class="icon"><i class="fas fa-database"></i></div>
           <h2>Databases</h2>
-          <p>As a Rails developer, I mainly work with PostgreSQL and SQLite.</p>
+          <p>As a Rails developer, I mainly work with PostgreSQL, SQLite and Redis.</p>
         </div>
       </div>
     </div>
   </section>
-  <!-- End Skills Section -->
-
-  <!-- Projects Section -->
+  
   <section id="projects">
     <div class="projects container">
       <div class="projects-header">
@@ -135,9 +135,7 @@
       </div>
     </div>
   </section>
-  <!-- End Projects Section -->
-
-  <!-- About Section -->
+  
   <section id="about">
     <div class="about container">
       <div class="col-left">
@@ -157,9 +155,7 @@
       </div>
     </div>
   </section>
-  <!-- End About Section -->
-
-  <!-- Contact Section -->
+ 
   <section id="contact">
     <div class="contact container">
       <div>
@@ -191,9 +187,7 @@
       </div>
     </div>
   </section>
-  <!-- End Contact Section -->
-
-  <!-- Footer -->
+  
   <section id="footer">
     <div class="footer container">
       <div class="brand">
@@ -214,7 +208,7 @@
       <p>Copyright © 2021 XHM. All rights reserved</p>
     </div>
   </section>
-  <!-- End Footer -->
+  
   <script src="./app.js"></script>
 </body>
 </html>
