--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
   <meta name="twitter:card" content="summary"/>
   <meta name="twitter:site" content="@_xhernan"/>
   <meta name="twitter:creator" content="@_xhernan"/>
+  <meta property="twitter:domain" content="xhernandez.me">
+  <meta property="twitter:url" content="https://www.xhernandez.me/">
+  <meta name="twitter:title" content="Xavier Hernandez's Portfolio">
+  <meta name="twitter:description" content="Personal portfolio of Xavier Hernandez. Web Developer Ruby on Rails | JavaScript.">
+  <meta name="twitter:image" content="https://images.unsplash.com/photo-1484417894907-623942c8ee29?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2978&q=80">
   <meta property="og:url" content="https://www.xhernandez.me/"/>
+  <meta property="og:type" content="website">
   <meta property="og:title" content="Xavier Hernandez's Portfolio">
   <meta property="og:description" content="Personal portfolio of Xavier Hernandez. Web Developer Ruby on Rails | JavaScript.">
   <meta property="og:image" content="https://images.unsplash.com/photo-1484417894907-623942c8ee29?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2978&q=80"/>
