--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <title>Xavier Hernandez - Web Developer</title>
 </head>
 <body>
- 
- 
+
+
   <section id="header">
     <div class="header container">
       <div class="nav-bar">
@@ -49,7 +49,7 @@
       </div>
     </div>
   </section>
-  
+
   <section id="hero">
     <div class="hero container">
       <div>
@@ -61,7 +61,7 @@
       </div>
     </div>
   </section>
- 
+
   <section id="skills">
     <div class="skills container">
       <div class="skill-top">
@@ -91,7 +91,7 @@
       </div>
     </div>
   </section>
-  
+
   <section id="projects">
     <div class="projects container">
       <div class="projects-header">
@@ -141,7 +141,7 @@
       </div>
     </div>
   </section>
-  
+
   <section id="about">
     <div class="about container">
       <div class="col-left">
@@ -152,16 +152,16 @@
       <div class="col-right">
         <h1 class="section-title">About <span>me</span></h1>
         <h2>Full Stack Web Developer</h2>
-        <p>After a 10 years career as LiveOps manager for the french iGaming market leader, I decided to move to programming through web development. 
-          Following a Full-stack bootcamp at Le Wagon Bordeaux where I obtained my certification, I am now looking for a position as a junior full-stack or back-end developer. 
-          I'm product-oriented, customer centric, and eager to develop my skills with both Ruby on Rails and Javascript. I have good soft skills, and speak a fluent English. Open to relocation.</p>
+        <p>After a 10 years career as LiveOps manager for the french iGaming market leader, I decided to move to programming through web development.
+          Following a Full-stack bootcamp at Le Wagon Bordeaux where I obtained my certification, I am now looking for a position as a full-stack developer.
+          I'm product-oriented, customer centric, and eager to develop my skills with both Ruby on Rails and Javascript (VueJS, NuxtJS, Express...). I have good soft skills, and speak a fluent English. Open to relocation.</p>
         <a href="./images/xhernandez-cv-FR.pdf" class="cta">French Resume</a>
         <br>
         <a href="./images/xhernandez-cv-EN.pdf" class="cta-secondary">English Resume</a>
       </div>
     </div>
   </section>
- 
+
   <section id="contact">
     <div class="contact container">
       <div>
@@ -193,7 +193,7 @@
       </div>
     </div>
   </section>
-  
+
   <section id="footer">
     <div class="footer container">
       <div class="brand">
@@ -214,7 +214,7 @@
       <p>Copyright © 2021 XHM. All rights reserved</p>
     </div>
   </section>
-  
+
   <script src="./app.js"></script>
 </body>
 </html>
