PDFs links updated

--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
         <p>After a 10 years career as LiveOps manager for the french iGaming market leader, I decided to move to programming through web development.
           Following a Full-stack bootcamp at Le Wagon Bordeaux where I obtained my certification, I am now looking for a position as a full-stack developer.
           I'm product-oriented, customer centric, and eager to develop my skills with both Ruby on Rails and Javascript (VueJS, NuxtJS, Express...). I have good soft skills, and speak a fluent English. Open to relocation.</p>
-        <a href="./images/xhernandez-cv-FR.pdf" class="cta">French Resume</a>
+        <a href="./images/XavierHM-CV-FR.pdf" class="cta">French Resume</a>
         <br>
-        <a href="./images/xhernandez-cv-EN.pdf" class="cta-secondary">English Resume</a>
+        <a href="./images/XavierHM-CV-EN.pdf" class="cta-secondary">English Resume</a>
       </div>
     </div>
   </section>
