Updated CVs and content.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="skill-item">
           <div class="icon"><i class="fab fa-html5"></i><i class="fab fa-css3-alt"></i></div>
           <h2>HTML5 | CSS3</h2>
-          <p>HTML Semantic, Organic SEO, CSS Flexbox and Grid, Bootstrap5 and TailwindCSS.</p>
+          <p>HTML Semantic, Organic SEO, CSS Flexbox and Grid, Bootstrap5 and SASS.</p>
         </div>
         <div class="skill-item">
           <div class="icon"><i class="far fa-gem"></i></div>
@@ -81,7 +81,7 @@
         <div class="skill-item">
           <div class="icon"><i class="fab fa-js"></i></div>
           <h2>JavaScript ES6</h2>
-          <p>I use JavaScript Vanilla and popular JS libraries associated with Rails, like Stimulus and RequestJS.</p>
+          <p>JavaScript Vanilla, VueJS, NuxtJS and libraries associated with Rails like Stimulus.</p>
         </div>
         <div class="skill-item">
           <div class="icon"><i class="fas fa-database"></i></div>
@@ -154,7 +154,7 @@
         <h2>Full Stack Web Developer</h2>
         <p>After a 10 years career as LiveOps manager for the french iGaming market leader, I decided to move to programming through web development.
           Following a Full-stack bootcamp at Le Wagon Bordeaux where I obtained my certification, I am now looking for a position as a full-stack developer.
-          I'm product-oriented, customer centric, and eager to develop my skills with both Ruby on Rails and Javascript (VueJS, NuxtJS, Express...). I have good soft skills, and speak a fluent English. Open to relocation.</p>
+          I'm product-oriented, customer centric, and eager to develop my skills with both Javascript (VueJS, NuxtJS, Express...) and Ruby on Rails. I have good soft skills, and speak a fluent English. Open to relocation.</p>
         <a href="./images/XavierHM-CV-FR.pdf" class="cta">French Resume</a>
         <br>
         <a href="./images/XavierHM-CV-EN.pdf" class="cta-secondary">English Resume</a>
