--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="nav-bar">
         <div class="brand">
           <a href="#hero">
-            <h1><span>X</span>avier<span>H</span></h1>
+            <h1><span>X</span>H</h1>
           </a>
         </div>
         <div class="nav-list">
@@ -54,10 +54,10 @@
     <div class="hero container">
       <div>
         <div class="profile-pic"></div>
-        <h1>Hello, <span></span></h1>
-        <h1>My name is <span></span></h1>
-        <h1>Xavier <span></span></h1>
-        <a href="#projects" type="button" class="cta">PORTFOLIO</a>
+        <h1>Hi, I'm Xavier <span></span></h1>
+        <h1>Web Developer <span></span></h1>
+        <h1>Javascript - Ruby <span></span></h1>
+        <a href="#skills" type="button" class="cta">LEARN MORE</a>
       </div>
     </div>
   </section>
@@ -65,7 +65,7 @@
   <section id="skills">
     <div class="skills container">
       <div class="skill-top">
-        <h1 class="section-title">Sk<span>i</span>lls</h1>
+        <h1 class="section-title"><span>Skills</span></h1>
       </div>
       <div class="skill-bottom">
         <div class="skill-item">
@@ -75,8 +75,8 @@
         </div>
         <div class="skill-item">
           <div class="icon"><i class="far fa-gem"></i></div>
-          <h2>Ruby | Ruby on Rails</h2>
-          <p>Rails and its large collection of gems : Hotwire, Devise, Pundit, Sidekiq, as well as Minitest, RSpec and Heroku for deployment.</p>
+          <h2>Ruby on Rails</h2>
+          <p>Rails and gems like : Hotwire, Devise, Pundit, Sidekiq, RSpec and Capybara.</p>
         </div>
         <div class="skill-item">
           <div class="icon"><i class="fab fa-js"></i></div>
@@ -146,11 +146,11 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="./images/profile_optimized-removebg-preview.png" alt="Profile picture">
+          <img src="./images/xhm_profile.jpg" alt="Profile picture">
         </div>
       </div>
       <div class="col-right">
-        <h1 class="section-title">About <span>me</span></h1>
+        <h1 class="section-title"><span>About </span>me</h1>
         <h2>Full Stack Web Developer</h2>
         <p>After a 10 years career as LiveOps manager for the french iGaming market leader, I decided to move to programming through web development.
           Following a Full-stack bootcamp at Le Wagon Bordeaux where I obtained my certification, I am now looking for a position as a full-stack developer.
@@ -163,9 +163,20 @@
   </section>
 
   <section id="contact">
-    <div class="contact container">
+    <div class="contact container-mini">
       <div>
-        <h1 class="section-title">Contact <span>info</span></h1>
+        <h1 class="section-title"><span>Contact </span>infos</h1>
+      </div>
+      <div class="social-icon">
+        <div class="social-item">
+          <a href="https://www.linkedin.com/in/xavihrez" target="_blank" rel="noopener"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <div class="social-item">
+          <a href="https://github.com/XavHernandez" target="_blank" rel="noopener"><i class="fab fa-github-square"></i></a>
+        </div>
+        <div class="social-item">
+          <a href="https://twitter.com/_xhernan" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a>
+        </div>
       </div>
       <div class="contact-items">
         <div class="contact-item">
@@ -196,21 +207,10 @@
 
   <section id="footer">
     <div class="footer container">
-      <div class="brand">
+      <div class="branding">
         <h1><span>X</span>avier <span>H</span>ernandez</h1>
       </div>
       <h2>Web Developement</h2>
-      <div class="social-icon">
-        <div class="social-item">
-          <a href="https://www.linkedin.com/in/xavihrez" target="_blank" rel="noopener"><i class="fab fa-linkedin"></i></a>
-        </div>
-        <div class="social-item">
-          <a href="https://github.com/XavHernandez" target="_blank" rel="noopener"><i class="fab fa-github-square"></i></a>
-        </div>
-        <div class="social-item">
-          <a href="https://twitter.com/_xhernan" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a>
-        </div>
-      </div>
       <p>Copyright © 2021 XHM. All rights reserved</p>
     </div>
   </section>
