--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <a href="https://www.linkedin.com/in/xavihrez" target="_blank" rel="noopener"><i class="fab fa-linkedin"></i></a>
         </div>
         <div class="social-item">
-          <a href="https://github.com/XavHernandez" target="_blank" rel="noopener"><i class="fab fa-github-square"></i></a>
+          <a href="https://github.com/xavhm" target="_blank" rel="noopener"><i class="fab fa-github-square"></i></a>
         </div>
         <div class="social-item">
           <a href="https://twitter.com/_xhernan" target="_blank" rel="noopener"><i class="fab fa-twitter-square"></i></a>
